tests/compilefail26.out
[1mtests/compilefail26.pas:6:5: [0m[1m[91merror:[0m Constant Redefined: pi
     6 | 	pi = 3.1415;